cfn_benchmark/cfn_templates/sachinsaitawadekar__CloudFormations/ALB/alb-public.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: "Public Applcation Load Balancer"
Parameters:
  NetworkStackName:
    Description: Name of an active CloudFormation stack.
    Type: String
    MinLength: 1
    MaxLength: 255
    AllowedPattern: "^[a-zA-Z][-a-zA-Z0-9]*$"
    Default: BigBlueButtonALB
  myvpcid:
    Description: Name of the Existing VPC
    Type: AWS::EC2::VPC::Id
  PublicSubnetIDs:
    Description: Specify Public Subnet IDs
    Type: List<AWS::EC2::Subnet::Id>
  LoadBalancerCertificateArn:
    Description: Certificate ARN to associate with the load balancer.
    Type: String
Resources:
  publicALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: panasonicadp-public-alb
      VpcId:
        Ref: myvpcid
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '443'
        ToPort: '443'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: BigBlueButtonALB
      - Key: environment
        Value: Sanbox
  publicAppLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: bigBluebutton-alb
      Scheme: internet-facing
      Subnets: !Ref PublicSubnetIDs
      LoadBalancerAttributes:
      - Key: idle_timeout.timeout_seconds
        Value: '1050'
      - Value: 'true'
        Key: deletion_protection.enabled
      SecurityGroups:
      - Ref: publicALBSecurityGroup
      Tags:
      - Key: Name
        Value: BigBlueButton
      - Key: environment
        Value: Sanbox
  TargetGroup1:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: TargetGroup80
      Port: 80
      Protocol: HTTP
      HealthCheckPath: "/"
      TargetGroupAttributes:
      - Key: deregistration_delay.timeout_seconds
        Value: '20'
      VpcId: !Ref myvpcid
  TargetGroup2:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: TargetGroup443
      Port: 443
      Protocol: HTTPS
      HealthCheckPath: "/"
      TargetGroupAttributes:
      - Key: deregistration_delay.timeout_seconds
        Value: '20'
      VpcId: !Ref myvpcid
  Listener80:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: TargetGroup1
      LoadBalancerArn:
        Ref: publicAppLoadBalancer
      Port: '80'
      Protocol: HTTP
  Listener443:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: TargetGroup2
      LoadBalancerArn:
        Ref: publicAppLoadBalancer
      Port: '443'
      Certificates:
      - CertificateArn: !Ref LoadBalancerCertificateArn
      Protocol: HTTPS
Outputs:
  publicALBSecurityGroup:
    Value:
      Ref: publicALBSecurityGroup
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-publicALBSecurityGroup"
  ALBLoadBalancer:
    Value:
      Ref: publicAppLoadBalancer
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-LoadBalancer"
